--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,23 +19,22 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
+    # Runs a single command using the runners shell
     - name: Setup Node.js environment
-      uses: actions/setup-node@v2-beta
-      with: 
+      uses: actions/setup-node@v1.4.2
+      with:
         version: 12
         
     - name: GitHub Action for Yarn
       uses: Borales/actions-yarn@v2.1.0
       with:
-        # Yarn command
-        cmd: install # npm install/ yarn install
-    
-    - name: Creating build
+        cmd: install
+        
+    - name: Building using Yarn
       run: yarn build
-    
-    - name: installing surge  
+      
+    - name: Installing Surge
       run: npm install -g surge
-    
+      
     - name: deploying on surge
-      run: surge ./build http://projectxyz.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./build http://projectxyz.surge.sh/ --token ${{ secrets.REACT1_TOKEN }}
