--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,4 @@ jobs:
       run: npm install -g surge
       
     - name: deploying on surge
-      run: surge ./build http://projectxyz.surge.sh/ --token ${{ secrets.REACT1_TOKEN }}
+      run: surge ./build http://projectxyz.surge.sh/ --token ${{ secrets.SURGE_TOKEN }}
